--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 customtkinter
-librosa>=0.10.0
-numpy<2.0
-soundfile
 pygame
-scipy
-packaging
-numba
+numpy
 matplotlib
-pyworld
 tkinterdnd2
+scipy
+librosa
+soundfile
+pyworld
+packaging
