--- a/PySerum/transformer_settings.json
+++ b/PySerum/transformer_settings.json
@@ -1,15 +1,81 @@
 {
-    "input_path": "",
-    "Iteration": "10",
-    "MixMode": "Random Mix 2",
-    "MorphFreq": "0.5",
-    "ReverseMode": "None",
-    "ScratchEnable": false,
-    "StretchEnable": false,
-    "FlutterEnable": false,
-    "ReverbTime": "3.0",
-    "ReverbWet": "0.0",
-    "DelayTime": "0.5",
-    "DelayFeedback": "0.5",
-    "DelayWet": "0.0"
+    "input": "F:/Animal Voice Morpher/PySerum/Output/Quartz/Slice001",
+    "params": {
+        "Iteration": {
+            "val": "20",
+            "rnd": false
+        },
+        "MixCount": {
+            "val": "2",
+            "rnd": true,
+            "min": "1",
+            "max": "4"
+        },
+        "MorphStartOffset": {
+            "val": "0.0",
+            "rnd": false,
+            "min": "0.0",
+            "max": "1.0"
+        },
+        "MorphFreq": {
+            "val": "5",
+            "rnd": true,
+            "min": "0.1",
+            "max": "20"
+        },
+        "ReverseProb": {
+            "val": "0.5",
+            "rnd": true,
+            "min": "0.0",
+            "max": "0.6"
+        },
+        "ScratchProb": {
+            "val": "0.0",
+            "rnd": true,
+            "min": "0.0",
+            "max": "0.5"
+        },
+        "StretchProb": {
+            "val": "0.0",
+            "rnd": true,
+            "min": "-0.6",
+            "max": "0.4"
+        },
+        "FlutterProb": {
+            "val": "0.0",
+            "rnd": true,
+            "min": "0.0",
+            "max": "0.7"
+        },
+        "ReverbTime": {
+            "val": "3.0",
+            "rnd": true,
+            "min": "0.1",
+            "max": "2.0"
+        },
+        "ReverbWet": {
+            "val": "1",
+            "rnd": false,
+            "min": "0.1",
+            "max": "0.3"
+        },
+        "DelayTime": {
+            "val": "0.5",
+            "rnd": true,
+            "min": "0.01",
+            "max": "1.0"
+        },
+        "DelayFeedback": {
+            "val": "0.5",
+            "rnd": true,
+            "min": "0.1",
+            "max": "-0.3"
+        },
+        "DelayWet": {
+            "val": "0.0",
+            "rnd": true,
+            "min": "0.0",
+            "max": "1.0"
+        }
+    }
 }
