--- a/PySerum/last_launcher_state.json
+++ b/PySerum/last_launcher_state.json
@@ -1,1 +1,1 @@
-{"last_batch_name": "PC2_Batch_001", "use_excel": true, "excel_path": ""}
+{"last_batch_name": "PC2_Batch_001", "use_excel": false, "excel_path": ""}
