不要な過去データ削除　タグ更新

--- a/PySerum/tagger_config.json
+++ b/PySerum/tagger_config.json
@@ -1,430 +1,442 @@
 {
-    "quick_tags": [
-        [
-            "Acid",
-            "酸"
-        ],
-        [
-            "AI",
-            "人工"
-        ],
-        [
-            "Alarm",
-            "警報"
-        ],
-        [
-            "Alien",
-            "異星人"
-        ],
-        [
-            "Android",
-            "ｱﾝﾄﾞﾛｲﾄﾞ"
-        ],
-        [
-            "Banshee",
-            "バンシー"
-        ],
-        [
-            "Bark",
-            "吠える"
-        ],
-        [
-            "Beam",
-            "ビーム"
-        ],
-        [
-            "Beast",
-            "野獣"
-        ],
-        [
-            "Bite",
-            "噛む"
-        ],
-        [
-            "Blast",
-            "爆風"
-        ],
-        [
-            "Blob",
-            "粘液"
-        ],
-        [
-            "Bone",
-            "骨"
-        ],
-        [
-            "Breath",
-            "ブレス"
-        ],
-        [
-            "Brightness",
-            "明るい"
-        ],
-        [
-            "Burn",
-            "燃焼"
-        ],
-        [
-            "Chirp",
-            "チープ"
-        ],
-        [
-            "Choke",
-            "窒息"
-        ],
-        [
-            "Cinematic",
-            "シネマ"
-        ],
-        [
-            "Clear",
-            "クリア"
-        ],
-        [
-            "Click",
-            "クリック"
-        ],
-        [
-            "Construct",
-            "構造体"
-        ],
-        [
-            "Cry",
-            "泣き声"
-        ],
-        [
-            "Cyber",
-            "サイバー"
-        ],
-        [
-            "Demon",
-            "悪魔"
-        ],
-        [
-            "Distortion",
-            "歪み"
-        ],
-        [
-            "Drone",
-            "ドローン"
-        ],
-        [
-            "Earthquake",
-            "地震"
-        ],
-        [
-            "Electricity",
-            "電気"
-        ],
-        [
-            "Elemental",
-            "精霊・属性"
-        ],
-        [
-            "Energy",
-            "エネルギー"
-        ],
-        [
-            "Error",
-            "エラー"
-        ],
-        [
-            "Explosion",
-            "爆発"
-        ],
-        [
-            "Fast",
-            "速い"
-        ],
-        [
-            "Fire",
-            "炎"
-        ],
-        [
-            "Flesh",
-            "肉体"
-        ],
-        [
-            "Footstep",
-            "足音"
-        ],
-        [
-            "Forcefield",
-            "フォース"
-        ],
-        [
-            "Gas",
-            "ガス"
-        ],
-        [
-            "Ghost",
-            "幽霊"
-        ],
-        [
-            "Glass",
-            "ガラス"
-        ],
-        [
-            "Glitch",
-            "ｸﾞﾘｯﾁ"
-        ],
-        [
-            "Gravity",
-            "重力"
-        ],
-        [
-            "Gurgle",
-            "ゴロゴロ"
-        ],
-        [
-            "HighFreq",
-            "高周波"
-        ],
-        [
-            "Horror",
-            "ホラー"
-        ],
-        [
-            "Howl",
-            "遠吠え"
-        ],
-        [
-            "Hum",
-            "ハム音"
-        ],
-        [
-            "Hydraulic",
-            "油圧"
-        ],
-        [
-            "Ice",
-            "氷"
-        ],
-        [
-            "Impact",
-            "衝撃"
-        ],
-        [
-            "Insect",
-            "昆虫"
-        ],
-        [
-            "Iron",
-            "鉄"
-        ],
-        [
-            "Laser",
-            "レーザー"
-        ],
-        [
-            "Laugh",
-            "笑い声"
-        ],
-        [
-            "Liquid",
-            "液体"
-        ],
-        [
-            "Long",
-            "長い"
-        ],
-        [
-            "LowEnd",
-            "低音"
-        ],
-        [
-            "Magic",
-            "魔法"
-        ],
-        [
-            "MagicWind",
-            "魔法風"
-        ],
-        [
-            "Magnetic",
-            "磁気"
-        ],
-        [
-            "Malfunction",
-            "故障"
-        ],
-        [
-            "Mech",
-            "メカ"
-        ],
-        [
-            "Metallic",
-            "金属音"
-        ],
-        [
-            "Monster",
-            "モンスター"
-        ],
-        [
-            "Noise",
-            "ノイズ"
-        ],
-        [
-            "Organic",
-            "有機的"
-        ],
-        [
-            "Pant",
-            "息切れ"
-        ],
-        [
-            "Parasite",
-            "寄生虫"
-        ],
-        [
-            "Plasma",
-            "プラズマ"
-        ],
-        [
-            "Poison",
-            "毒"
-        ],
-        [
-            "Roar",
-            "咆哮"
-        ],
-        [
-            "Robot",
-            "ロボット"
-        ],
-        [
-            "Scanner",
-            "スキャナー"
-        ],
-        [
-            "Sci-Fi",
-            "SF"
-        ],
-        [
-            "Scream",
-            "悲鳴"
-        ],
-        [
-            "Short",
-            "短い"
-        ],
-        [
-            "Shriek",
-            "金切り声"
-        ],
-        [
-            "Slash",
-            "斬撃"
-        ],
-        [
-            "Slow",
-            "遅い"
-        ],
-        [
-            "Smash",
-            "スマッシュ"
-        ],
-        [
-            "Spark",
-            "スパーク"
-        ],
-        [
-            "Squeak",
-            "きしみ音"
-        ],
-        [
-            "Steam",
-            "蒸気"
-        ],
-        [
-            "Stone",
-            "石"
-        ],
-        [
-            "Synthetic",
-            "合成音"
-        ],
-        [
-            "Teleport",
-            "テレポート"
-        ],
-        [
-            "Tiny",
-            "小さい"
-        ],
-        [
-            "Thin",
-            "薄い"
-        ],
-        [
-            "Transition",
-            "遷移"
-        ],
-        [
-            "Undulation",
-            "うねり"
-        ],
-        [
-            "Warp",
-            "ワープ"
-        ],
-        [
-            "Whine",
-            "唸り"
-        ],
-        [
-            "Whisper",
-            "ささやき"
-        ],
-        [
-            "Whoosh",
-            "シューッ"
-        ],
-        [
-            "Wonder",
-            "不思議"
-        ],
-        [
-            "Wood",
-            "木"
-        ],
-        [
-            "--- NEGATIVE ---",
-            "--- 悪い例 ---"
-        ],
-        [
-            "Clipping",
-            "音割れ"
-        ],
-        [
-            "NoiseFloor",
-            "過剰ノイズ"
-        ],
-        [
-            "Cutoff",
-            "尻切れ"
-        ],
-        [
-            "TooLong",
-            "長すぎる"
-        ],
-        [
-            "TooQuiet",
-            "小さすぎ"
-        ],
-        [
-            "StereoImbalance",
-            "ステレオ崩れ"
-        ],
-        [
-            "Dull",
-            "篭り"
-        ],
-        [
-            "Muddy",
-            "濁り"
-        ]
+  "quick_tags": [
+    [
+      "Acid",
+      "酸"
     ],
+    [
+      "AI",
+      "人工"
+    ],
+    [
+      "Alarm",
+      "警報"
+    ],
+    [
+      "Alien",
+      "異星人"
+    ],
+    [
+      "Android",
+      "ｱﾝﾄﾞﾛｲﾄﾞ"
+    ],
+    [
+      "Banshee",
+      "バンシー"
+    ],
+    [
+      "Bark",
+      "吠える"
+    ],
+    [
+      "Beam",
+      "ビーム"
+    ],
+    [
+      "Beast",
+      "野獣"
+    ],
+    [
+      "Bite",
+      "噛む"
+    ],
+    [
+      "Blast",
+      "爆風"
+    ],
+    [
+      "Blob",
+      "粘液"
+    ],
+    [
+      "Bone",
+      "骨"
+    ],
+    [
+      "Breath",
+      "ブレス"
+    ],
+    [
+      "Brightness",
+      "明るい"
+    ],
+    [
+      "Burn",
+      "燃焼"
+    ],
+    [
+      "Chirp",
+      "チープ"
+    ],
+    [
+      "Choke",
+      "窒息"
+    ],
+    [
+      "Cinematic",
+      "シネマ"
+    ],
+    [
+      "Clear",
+      "クリア"
+    ],
+    [
+      "Click",
+      "クリック"
+    ],
+    [
+      "Construct",
+      "構造体"
+    ],
+    [
+      "Cry",
+      "泣き声"
+    ],
+    [
+      "Cyber",
+      "サイバー"
+    ],
+    [
+      "Demon",
+      "悪魔"
+    ],
+    [
+      "Distortion",
+      "歪み"
+    ],
+    [
+      "Drone",
+      "ドローン"
+    ],
+    [
+      "Earthquake",
+      "地震"
+    ],
+    [
+      "Electricity",
+      "電気"
+    ],
+    [
+      "Elemental",
+      "精霊・属性"
+    ],
+    [
+      "Energy",
+      "エネルギー"
+    ],
+    [
+      "Error",
+      "エラー"
+    ],
+    [
+      "Explosion",
+      "爆発"
+    ],
+    [
+      "Fast",
+      "速い"
+    ],
+    [
+      "Fire",
+      "炎"
+    ],
+    [
+      "Flesh",
+      "肉体"
+    ],
+    [
+      "Footstep",
+      "足音"
+    ],
+    [
+      "Forcefield",
+      "フォース"
+    ],
+    [
+      "Gas",
+      "ガス"
+    ],
+    [
+      "Ghost",
+      "幽霊"
+    ],
+    [
+      "Glass",
+      "ガラス"
+    ],
+    [
+      "Glitch",
+      "ｸﾞﾘｯﾁ"
+    ],
+    [
+      "Gravity",
+      "重力"
+    ],
+    [
+      "Gurgle",
+      "ゴロゴロ"
+    ],
+    [
+      "HighFreq",
+      "高周波"
+    ],
+    [
+      "Horror",
+      "ホラー"
+    ],
+    [
+      "Howl",
+      "遠吠え"
+    ],
+    [
+      "Hum",
+      "ハム音"
+    ],
+    [
+      "Ice",
+      "氷"
+    ],
+    [
+      "Impact",
+      "衝撃"
+    ],
+    [
+      "Insect",
+      "昆虫"
+    ],
+    [
+      "Iron",
+      "鉄"
+    ],
+    [
+      "Laser",
+      "レーザー"
+    ],
+    [
+      "Laugh",
+      "笑い声"
+    ],
+    [
+      "Liquid",
+      "液体"
+    ],
+    [
+      "Long",
+      "長い"
+    ],
+    [
+      "LowEnd",
+      "低音"
+    ],
+    [
+      "Magic",
+      "魔法"
+    ],
+    [
+      "MagicWind",
+      "魔法風"
+    ],
+    [
+      "Magnetic",
+      "磁気"
+    ],
+    [
+      "Malfunction",
+      "故障"
+    ],
+    [
+      "Mech",
+      "メカ"
+    ],
+    [
+      "Metallic",
+      "金属音"
+    ],
+    [
+      "Monster",
+      "モンスター"
+    ],
+    [
+      "Noise",
+      "ノイズ"
+    ],
+    [
+      "Organic",
+      "有機的"
+    ],
+    [
+      "Pant",
+      "息切れ"
+    ],
+    [
+      "Parasite",
+      "寄生虫"
+    ],
+    [
+      "Plasma",
+      "プラズマ"
+    ],
+    [
+      "Poison",
+      "毒"
+    ],
+    [
+      "Roar",
+      "咆哮"
+    ],
+    [
+      "Scanner",
+      "スキャナー"
+    ],
+    [
+      "Sci-Fi",
+      "SF"
+    ],
+    [
+      "Scream",
+      "悲鳴"
+    ],
+    [
+      "Short",
+      "短い"
+    ],
+    [
+      "Shriek",
+      "金切り声"
+    ],
+    [
+      "Siren",
+      "サイレン"
+    ],
+    [
+      "Slash",
+      "斬撃"
+    ],
+    [
+      "Slow",
+      "遅い"
+    ],
+    [
+      "Smash",
+      "スマッシュ"
+    ],
+    [
+      "Spark",
+      "スパーク"
+    ],
+    [
+      "Squeak",
+      "きしみ音"
+    ],
+    [
+      "Steam",
+      "蒸気"
+    ],
+    [
+      "Stone",
+      "石"
+    ],
+    [
+      "Synthetic",
+      "合成音"
+    ],
+    [
+      "Teleport",
+      "テレポート"
+    ],
+    [
+      "Tiny",
+      "小さい"
+    ],
+    [
+      "Thin",
+      "薄い"
+    ],
+    [
+      "Transition",
+      "遷移"
+    ],
+    [
+      "Undulation",
+      "うねり"
+    ],
+    [
+      "Warp",
+      "ワープ"
+    ],
+    [
+      "Whine",
+      "唸り"
+    ],
+    [
+      "Whisper",
+      "ささやき"
+    ],
+    [
+      "Whoosh",
+      "シューッ"
+    ],
+    [
+      "Wonder",
+      "不思議"
+    ],
+    [
+      "Wood",
+      "木"
+    ],
+    [
+      "--- NEGATIVE ---",
+      "--- 悪い例 ---"
+    ],
+    [
+      "BadRev",
+      "悪リバーブ"
+    ],
+    [
+      "BadDelay",
+      "悪ディレイ"
+    ],
+    [
+      "Clipping",
+      "音割れ"
+    ],
+    [
+      "Crackle",
+      "クラックル"
+    ],
+    [
+      "NoiseFloor",
+      "過剰ノイズ"
+    ],
+    [
+      "Cutoff",
+      "尻切れ"
+    ],
+    [
+      "TooLong",
+      "長すぎる"
+    ],
+    [
+      "TooQuiet",
+      "小さすぎ"
+    ],
+    [
+      "StereoImbalance",
+      "ステレオ崩れ"
+    ],
+    [
+      "Dull",
+      "篭り"
+    ],
+    [
+      "Plosive",
+      "破裂音"
+    ],
+    [
+      "Muddy",
+      "濁り"
+    ]
+  ],
     "layout": {
         "window_geometry": "1600x800",
         "tags_expand": true,
